--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
       <artifactId>vertx-web</artifactId>
     </dependency>
 
+<dependency>
+  <groupId>ch.qos.logback</groupId>
+  <artifactId>logback-core</artifactId>
+  <version>1.2.1</version>
+</dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>io.vertx</groupId>
